3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix crash on invalid bulletwalls.
 server/time.c: ensure other_arch is not NULL.
Nicolas Weeger 2008-01-03

Fix plugin-related potential crash.
 server/plugins.c: ensure msg has a newline at the end, else bad things happen.
Nicolas Weeger 2008-01-03

Win32 compilation fixes.
 server/c_misc.c plugins.c: variable declaration/use order.
Nicolas Weeger 2008-01-03

Win32 compilation fixes.
 plugins/cfpython/include/cfpython_proto.h: missing CF_PLUGIN.
 plugins/cfpython/cjson.c: variable order.
Nicolas Weeger 2008-01-03

Win32 compilation fixes.
 include/win32.h: #define sleep.
 plugins/cfanim/include/cfanim_proto.h: missing CF_PLUGIN.
Nicolas Weeger 2008-01-03

Fix variable being used while not initialized.
 server/player.c
Nicolas Weeger 2007-12-28

Merge documentation change from wiki.
 doc/Developers/objects
Kevin Bulgrien 2007-12-28

Fix variable being used while not initialized.
 server/player.c
Nicolas Weeger 2007-12-28

No functional change, reformat object types defines for export to wiki page.
  include/define.h
Kevin Bulgrien 2007-12-27

Fix spurious errors in log from plugins.
 common/arch.c: new function try_find_archetype().
 include/libproto.h: new prototype.
 server/plugins.c: replace find_archetype() by try_find_archetype().
Nicolas Weeger 2007-12-27

plugins/cfpython/cfpython.c: fix invalid options when empty parameter.
Nicolas Weeger 2007-12-26

Add support for user-defined events. Those can be called from the Python plugin.
    server/plugins.c
    plugins/common/include/plugin_common.h
    plugins/common/plugin_common.c
    plugins/cfpython/cfpython_object.c